# spec-checker

./: .gitignore  .spec-checker.yaml.example  Cargo.toml  LICENSE  README.md  build.rs  rules.example.yaml  rules.yaml
.claude/commands/: spec-init.md
docs/: architecture.md  skills.md  spec-format.md  type-formulas.md  verification.md
skills/: fill-behavioral-specs.md  spec-init.md
specs/: Bridge.spec.yaml  _defaults.yaml  ai_init.spec.yaml  ai_refine.spec.yaml  behavioral.spec.yaml  checker.spec.yaml  core.subsystem.yaml  dependency.spec.yaml  extractors.spec.yaml  extractors.subsystem.yaml  extractors_rust.spec.yaml  extractors_solidity.spec.yaml  main.spec.yaml  rules.spec.yaml  smt.spec.yaml  spec-checker.spec.yaml  spec.spec.yaml  type_formula.spec.yaml  types.spec.yaml
specs/extractors/: _defaults.yaml  flow9.spec.yaml  flow9_ast.spec.yaml  flow9_parser.spec.yaml  mod.spec.yaml  rust.spec.yaml  solidity.spec.yaml
src/: ai_init.rs  ai_refine.rs  behavioral.rs  checker.rs  dependency.rs  flow9_ast.rs  flow9_parser.rs  main.rs  rules.rs  smt.rs  spec.rs  type_formula.rs  types.rs
src/extractors/: flow9.rs  flow9_ast.rs  flow9_parser.rs  mod.rs  rust.rs  solidity.rs
src/skill/: fill-behavioral-specs.md
