[package]
name = "spec-checker"
version = "0.1.0"
edition = "2021"
description = "Structural and behavioral specification checker"
license = "Apache-2.0"
repository = "https://github.com/fastxyz/allset-spec-checker"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# YAML parsing
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Async (for future features)
tokio = { version = "1", features = ["full"] }

# File watching (for future features)
# notify = "6"

# Colored output
colored = "2"

# Glob patterns for file discovery
glob = "0.3"

# Regex for pattern matching (Solidity fallback)
regex = "1"

# HTTP client for LLM API calls
reqwest = { version = "0.12", features = ["json"] }

# Hashing for cache keys
sha2 = "0.10"

# Rust AST parsing
syn = { version = "2", features = ["full", "parsing", "visit"] }
quote = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "spec-checker"
path = "src/main.rs"
